--- a/src/assets/styles/blocks/_header.scss
+++ b/src/assets/styles/blocks/_header.scss
@@ -1,4 +1,6 @@
-@import './base.scss';
+$main-color: #2F76FF;
+$gray-color: #919191;
+$main-font: 'Roboto';
 
 @media (min-width: 320px) {
     .header {
@@ -7,6 +9,14 @@
         left: -241px;
         top: 0px;
         background: #FAFAFA;
+
+        .container {
+            display: block;
+        }
+
+        &-container {
+            display: none;
+        }
 
         &-nav {
             padding-top: 16px;
@@ -95,20 +105,40 @@
                     border-radius: 5px;
                     border: none;
                     text-indent: 14px;
+                    position: relative;
                 }
 
-                &>select {
-                    position: absolute;
-                    display: flex;
-                    justify-content: space-evenly;
-                    text-indent: 10px;
+                &--select {
                     width: 101px;
                     height: 31px;
                     right: 49px;
-                    background: #EBF2FF;
-                    border-radius: 5px;
-                    border: none;
-                    -webkit-appearance: none;
+                    position: absolute;
+
+                    &>select {
+                        display: flex;
+                        justify-content: space-evenly;
+                        text-indent: 10px;
+                        width: 100%;
+                        height: 100%;
+                        background: #EBF2FF;
+                        border-radius: 5px;
+                        border: none;
+                        -webkit-appearance: none;
+                        outline: none;
+                    }
+
+                    &::before {
+                        position: absolute;
+                        content: "";
+                        top: 50%;
+                        right: 10px;
+                        pointer-events: none;
+                        display: block;
+                        transform: translateY(-50%);
+                        border-style: solid;
+                        border-width: 3px 3.5px 0 3.5px;
+                        border-color: #c4c4cf transparent transparent transparent;
+                    }
                 }
 
                 &--btn {
@@ -134,32 +164,187 @@
 
 @media (min-width: 1024px) {
     .header {
-        &-container {
-            margin-left: 78px;
-            margin-right: 82px;
-        }
-
         &-nav {
             display: none;
         }
 
         &-nav--desk {
             display: flex;
-            justify-content: end;
+            -webkit-justify-content: flex-end;
+            align-items: flex-end;
+            -webkit-align-items: flex-end;
 
             &__list {
                 display: flex;
                 width: 423px;
                 height: 35px;
-                justify-content: space-between;
                 align-items: center;
                 margin-right: 8px;
 
                 &-link {
-                    &>a {
+                    .dropdown-01 {
                         font-size: 14px;
                         line-height: 16px;
                         color: #0A0A0A;
+                        position: relative;
+                        margin-left: 10px;
+
+                        display: flex;
+                        align-items: center;
+                        width: 98px;
+                        height: 35px;
+                        background: none;
+
+                        .select-wrapper {
+                            margin-left: 5px;
+                            font-size: 14px;
+                            line-height: 16px;
+                            color: #0A0A0A;
+                            border: none;
+                            -webkit-appearance: none;
+                            outline: none;
+                            cursor: pointer;
+                            background: none;
+                        }
+                    }
+
+                    .dropdown-02 {
+                        font-size: 14px;
+                        line-height: 16px;
+                        color: #0A0A0A;
+                        position: relative;
+                        margin-left: 10px;
+
+                        display: flex;
+                        align-items: center;
+                        width: 61px;
+                        height: 35px;
+                        background: none;
+
+                        .select-wrapper {
+                            margin-left: 5px;
+                            font-size: 14px;
+                            line-height: 16px;
+                            color: #0A0A0A;
+                            border: none;
+                            -webkit-appearance: none;
+                            outline: none;
+                            cursor: pointer;
+                            background: none;
+                        }
+                    }
+
+                    .dropdown-03 {
+                        font-size: 14px;
+                        line-height: 16px;
+                        color: #0A0A0A;
+                        position: relative;
+                        display: flex;
+                        align-items: center;
+                        margin-left: 10px;
+
+                        width: 90px;
+                        height: 35px;
+
+                        &>div {
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+                            padding: 10px 0px;
+                            width: 5px;
+                            height: 35px;
+                            margin-left: 10px;
+        
+                            &>p {
+                                font-size: 14px;
+                                line-height: 16px;
+                                display: flex;
+                                align-items: center;
+                                color: #CDCDCD;                        
+                            }
+                        }
+                    }
+
+                    .dropdown-04 {
+                        font-size: 14px;
+                        line-height: 16px;
+                        color: #0A0A0A;
+                        position: relative;
+                        margin-left: 10px;
+
+                        display: flex;
+                        align-items: center;
+                        width: 68px;
+                        height: 35px;
+                        background: none;
+
+                        .select-wrapper {
+                            margin-left: 5px;
+                            font-size: 14px;
+                            line-height: 16px;
+                            color: #0A0A0A;
+                            border: none;
+                            -webkit-appearance: none;
+                            outline: none;
+                            cursor: pointer;
+                            background: none;
+                        }
+                    }
+
+                    .dropdown-05 {
+                        font-size: 14px;
+                        line-height: 16px;
+                        color: #0A0A0A;
+                        position: relative;
+                        margin-left: 10px;
+
+                        display: flex;
+                        align-items: center;
+                        width: 96px;
+                        height: 35px;
+                        background: none;
+
+                        .select-wrapper {
+                            margin-left: 5px;
+                            font-size: 14px;
+                            line-height: 16px;
+                            color: #0A0A0A;
+                            border: none;
+                            -webkit-appearance: none;
+                            outline: none;
+                            cursor: pointer;
+                            background: none;
+                        }
+                    }
+
+                    .link-dropdown::before {
+                        position: absolute;
+                        content: "";
+                        top: 50%;
+                        right: 10px;
+                        display: block;
+                        pointer-events: none;
+                        transform: translateY(-50%);
+                        border-style: solid;
+                        border-width: 3px 3.5px 0 3.5px;
+                        border-color: #c4c4cf transparent transparent transparent;
+                    }
+                }
+
+                &>div {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    padding: 10px 0px;
+                    width: 5px;
+                    height: 35px;
+
+                    &>p {
+                        font-size: 14px;
+                        line-height: 16px;
+                        display: flex;
+                        align-items: center;
+                        color: #CDCDCD;                        
                     }
                 }
             }
@@ -192,8 +377,14 @@
                 .header-search__form {    
                     position: relative;
 
-                    &>select {
+                    &--select {
                         right: 95px;
+                    }
+
+                    @media (min-width: 1440px) {
+                        &--select {
+                            right: 15%;
+                        }
                     }
     
                     &--btn {
@@ -236,6 +427,30 @@
                 &--item:last-child {
                     width: 52px;
                 }
+            }
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    .header {
+        .container {
+            position: relative;
+            width: 1280px;
+        }
+
+        &-nav {
+            &--desk {
+                &__list {
+                    width: 467px;
+                }
+            }
+        }
+
+        &-search {
+            justify-content: center;
+            &>form {
+                max-width: 640px;
             }
         }
     }
