--- a/src/assets/styles/blocks/_promo.scss
+++ b/src/assets/styles/blocks/_promo.scss
@@ -201,6 +201,7 @@
                     transition: 0.7s;
                     text-transform: uppercase;
                     font-size: 16px;
+                    cursor: pointer;
                 }
 
                 &--index:hover {
@@ -395,6 +396,8 @@
                         height: 63px;
                         border: 2px solid #EEEEEE;
                         border-radius: 5px;
+                        transition: 0.7s;
+                        cursor: pointer;
                         
                         &>img {
                             width: 47px;
@@ -404,6 +407,10 @@
     
                     .column-img:first-child {
                         margin-top: 0;
+                    }
+
+                    .column-img:hover {
+                        border: 2px solid $main-color;
                     }
                 }
     
@@ -517,14 +524,28 @@
                             font-size: 16px;
                             color: #0A0A0A;
                         }
-    
-                        &>select {
-                            margin-top: 10px;
-                            font-size: 14px;
-                            line-height: 16px;
-                            border: none;
-                            text-indent: unset;
-                            color: #0A0A0A;
+
+                        &__dropdown {
+                            width: 230px;
+                            display: flex;
+                            justify-content: flex-start;
+
+                            &>select {
+                                width: 100%;
+                                margin-top: 10px;
+                                font-size: 14px;
+                                line-height: 16px;
+                                border: none;
+                                text-indent: unset;
+                                color: #0A0A0A;
+                                -webkit-appearance: none;
+                                outline: none;
+                            }
+
+                            &>img {
+                                margin-top: 4.33px;
+                                margin-left: 5px;
+                            }
                         }
     
                         &__time {
@@ -721,6 +742,123 @@
                                 line-height: 16px;
                                 color: #626262;                                
                             }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .promo {
+        &-container {
+
+            .promo-img__desktop {
+                height: unset;
+
+                &--main {
+                    width: 400px;
+
+                    &>img {
+                        height: 100%;
+                    }
+                }
+            }
+
+            .promo-descr-desktop {
+                width: 469px;
+
+                .promo-size {
+                    margin-top: 18px;
+
+                    .promo-size__items {
+                        width: 100%;
+    
+                        &--index:nth-child(1n+5) {
+                            margin-left: 9px;
+                            margin-top: 0;
+                        }
+                    }
+                }
+
+                .promo-counter__elements {
+                    .counter {
+                        width: 96px;
+                        height: 31px;
+                    }
+                }
+
+                .promo-delivery {
+                    margin-top: 18px;
+                    width: 100%;
+                }
+
+                .promo-detail {
+                    margin-top: 18px;
+                }
+            }
+
+            .promo-blocks {
+                position: inherit;
+                margin-left: 26px;
+            }
+
+            .promo-price-desktop {
+                width: 300px;
+                height: 280px;
+
+                &__container {
+                    width: 260px;
+                    height: 243px;
+                }
+
+                &__retail {
+                    .price {
+                        font-size: 30px;
+                        line-height: 35px;
+                    }
+
+                    .old-price {
+                        font-size: 26px;
+                    }
+                }
+
+                &__wholesale {
+                    .price {
+                        font-size: 30px;
+                        line-height: 35px;
+                    }
+                }
+
+                &__buy {
+                    width: 260px;
+                    height: 60px;
+                    font-size: 20px;
+                }
+
+                &__btn {
+                    margin-top: 10px;
+                    width: 260px;
+                    height: 35px;
+                    font-size: 14px;
+                }
+            }
+
+            .promo-brand-desktop {
+                width: 100%;
+                margin-top: 20px;
+                justify-content: unset;
+
+                &__container {
+                    margin-left: 19px;
+
+                    .brand-img {
+                        width: 63px;
+                        height: 63px;
+
+                        &>img {
+                            width: 100%;
                         }
                     }
                 }
