--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,4 +1,3 @@
-
 @import './blocks/header';
 @import './blocks/subheader';
 @import './blocks/promo';
@@ -7,7 +6,7 @@
 @import './blocks/carouselitem';
 @import './blocks/review';
 @import './blocks/footer';
-@import './base.scss';
+@import './base';
 
 body {
     margin: 0;
@@ -16,7 +15,7 @@ body {
 }
 
 * {
-    font-family: $main-font;
+    font-family: 'Roboto';
     margin: 0;
     padding: 0;
     font-weight: 400;
@@ -47,6 +46,14 @@ a {
     .container {
         padding-left: 49px;
         padding-right: 49px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .container {
+        width: 1302px;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
