--- a/src/assets/styles/blocks/_description.scss
+++ b/src/assets/styles/blocks/_description.scss
@@ -169,9 +169,9 @@
 
                     &>dl {
                         margin-top: 10px;
-                        align-items: start;
+                        align-items: flex-start;
                         display: flex;
-                        align-items: end;
+                        align-items: flex-end;
                         flex-wrap: wrap;
                         width: 100%;
 
